--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ before_install:
   - docker login -u $username -p $password $registry
 
 script:
-  - git clone -b uuid https://$account:$token@$repo repo
+  - git clone uuid https://$account:$token@$repo repo
   - cd repo
   - ./ci.sh
